added selection based response

--- a/FrontEnd/popup.html
+++ b/FrontEnd/popup.html
@@ -14,6 +14,12 @@
 
         #summary {
             margin-top: 10px;
+            line-height: 1.4;
+        }
+
+        #summary strong {
+            font-weight: bold;
+            color: #333;
         }
     </style>
 </head>
